# platform.framework.web.browser-provider

./: .gbs.conf  AUTHORS  CMakeLists.txt  NOTICE  build_mobile64.sh  project.config
TC/web_bookmark/: config
TC/web_bookmark/testcase/: Makefile  tslist  utc_web_bookmark_backup.c  utc_web_bookmark_backup_all.c  utc_web_bookmark_clear_deleted_ids_p.c  utc_web_bookmark_clear_dirty_ids_p.c  utc_web_bookmark_create.c  utc_web_bookmark_data_changed_cb.c  utc_web_bookmark_delete.c  utc_web_bookmark_easy_create.c  utc_web_bookmark_easy_free.c  utc_web_bookmark_get_access_count.c  utc_web_bookmark_get_account_name.c  utc_web_bookmark_get_account_type.c  utc_web_bookmark_get_cond_ids_p.c  utc_web_bookmark_get_date_created.c  utc_web_bookmark_get_date_modified.c  utc_web_bookmark_get_date_visited.c  utc_web_bookmark_get_deleted_ids_p.c  utc_web_bookmark_get_device_id.c  utc_web_bookmark_get_device_name.c  utc_web_bookmark_get_dirty_ids_p.c  utc_web_bookmark_get_easy_all.c  utc_web_bookmark_get_errorcode.c  utc_web_bookmark_get_full_ids_p.c  utc_web_bookmark_get_full_with_deleted_ids_p.c  utc_web_bookmark_get_icon.c  utc_web_bookmark_get_icon_png.c  utc_web_bookmark_get_ids_p.c  utc_web_bookmark_get_info.c  utc_web_bookmark_get_is_editable.c  utc_web_bookmark_get_is_operator.c  utc_web_bookmark_get_parent_id.c  utc_web_bookmark_get_raw_retrieved_ids_p.c  utc_web_bookmark_get_retrieved_ids_p.c  utc_web_bookmark_get_root.c  utc_web_bookmark_get_sequence.c  utc_web_bookmark_get_snapshot.c  utc_web_bookmark_get_sync.c  utc_web_bookmark_get_timestamp_ids_p.c  (+26 more)
TC/web_bookmark_csc/: config
TC/web_bookmark_csc/testcase/: tslist  utc_web_bookmark_csc.c
TC/web_history/: config  run.sh
TC/web_history/testcase/: tslist  utc_web_history_create.c  utc_web_history_delete.c  utc_web_history_easy_create.c  utc_web_history_easy_free.c  utc_web_history_get_cond_ids_p.c  utc_web_history_get_date_count.c  utc_web_history_get_date_created.c  utc_web_history_get_date_ids_p.c  utc_web_history_get_date_modified.c  utc_web_history_get_date_visited.c  utc_web_history_get_duplicated_ids_p.c  utc_web_history_get_errorcode.c  utc_web_history_get_frequency.c  utc_web_history_get_icon.c  utc_web_history_get_info.c  utc_web_history_get_inquired_ids_p.c  utc_web_history_get_raw_retrieved_ids_p.c  utc_web_history_get_snapshot.c  utc_web_history_get_timestamp_ids_p.c  utc_web_history_get_title.c  utc_web_history_get_url.c  utc_web_history_get_webicon.c  utc_web_history_limit_size.c  utc_web_history_reset.c  utc_web_history_set_date_created.c  utc_web_history_set_date_modified.c  utc_web_history_set_date_visited.c  utc_web_history_set_frequency.c  utc_web_history_set_icon.c  utc_web_history_set_snapshot.c  utc_web_history_set_title.c  utc_web_history_set_url.c  utc_web_history_set_webicon.c  utc_web_history_visit.c
TC/web_scrap/: config  push.sh  test.mhtml
TC/web_scrap/testcase/: tslist  utc_web_scrap.c
TC/web_tab/: _export_env.sh  _export_target_env.sh  config
TC/web_tab/testcase/: tslist  utc_web_tab.c
bookmark-adaptor/: CMakeLists.txt  bookmark-adaptor-image.c  bookmark-adaptor.c  bookmark-adaptor.pc.in
bookmark-adaptor/include/: bookmark-adaptor.h  web_bookmark.h
bookmark-csc-adaptor/: CMakeLists.txt  bookmark-csc-adaptor.c  bookmark-csc-adaptor.pc.in
bookmark-csc-adaptor/include/: bookmark-csc-adaptor.h  web_bookmark_csc.h
common-adaptor/: common-adaptor-png.c  common-adaptor.c  sync-adaptor-bookmark.c  sync-adaptor-cloud-bookmark.c  sync-adaptor-cloud-json.c  sync-adaptor-cloud-tab.c  sync-adaptor-cloud.c  sync-adaptor-tab.c  sync-adaptor.c
common-adaptor/include/: common-adaptor-png.h  common-adaptor.h  sync-adaptor-bookmark.h  sync-adaptor-cloud-json.h  sync-adaptor-cloud.h  sync-adaptor-tab.h  sync-adaptor.h
doc/: web_bookmark_doc.h  web_history_doc.h
doc_prod/: web_bookmark_csc_doc.h  web_bookmark_doc.h  web_scrap_doc.h  web_tab_doc.h
history-adaptor/: CMakeLists.txt  history-adaptor.c  history-adaptor.pc.in
history-adaptor/include/: history-adaptor.h  web_history.h
packaging/: browser-provider.spec
provider/: CMakeLists.txt  browser-provider-bookmarks.c  browser-provider-db.c  browser-provider-history.c  browser-provider-main.c  browser-provider-notify.c  browser-provider-requests-manager.c  browser-provider-requests.c  browser-provider-scraps.c  browser-provider-shm.c  browser-provider-slots.c  browser-provider-socket.c  browser-provider-tabs.c
provider/include/: browser-provider-bookmarks.h  browser-provider-config.h  browser-provider-db-defs.h  browser-provider-db.h  browser-provider-history.h  browser-provider-log.h  browser-provider-notify.h  browser-provider-requests.h  browser-provider-scraps.h  browser-provider-shm.h  browser-provider-slots.h  browser-provider-socket.h  browser-provider-tabs.h  browser-provider.h
scrap-adaptor/: CMakeLists.txt  capi-web-scrap.pc.in  scrap-adaptor.c  scrap-adaptor.pc.in
scrap-adaptor/include/: scrap-adaptor.h  web_scrap.h
systemd/: browser-provider.service  browser-provider.socket
tab-adaptor/: CMakeLists.txt  tab-adaptor.c  tab-adaptor.pc.in
tab-adaptor/include/: tab-adaptor.h  web_tab.h
