CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(VERSION "${PKG_VERSION}-${PKG_RELEASE}")
MESSAGE("PROJECT : ${PKG_NAME}")
MESSAGE("VERSION : ${VERSION}")
MESSAGE("LICENSE PATH : ${PKG_LICENSE_PATH}")

IF(DEFINED SUPPORT_CLOUD_SYNC)
	MESSAGE("SUPPORT CLOUD SYNC : ${SUPPORT_CLOUD_SYNC}")
	IF(SUPPORT_CLOUD_SYNC)
		ADD_DEFINITIONS(-DSUPPORT_CLOUD_SYNC)
	ENDIF(SUPPORT_CLOUD_SYNC)
ENDIF(DEFINED SUPPORT_CLOUD_SYNC)

IF(DEFINED SUPPORT_BOOTING_DONE)
	MESSAGE("SUPPORT BOOTING DONE : ${SUPPORT_BOOTING_DONE}")
	IF(SUPPORT_BOOTING_DONE)
		ADD_DEFINITIONS(-DSUPPORT_BOOTING_DONE)
	ENDIF(SUPPORT_BOOTING_DONE)
ENDIF(DEFINED SUPPORT_BOOTING_DONE)

IF(DEFINED SUPPORT_LOG_MESSAGE)
	MESSAGE("SUPPORT_LOG_MESSAGE: ${SUPPORT_LOG_MESSAGE}")
	IF(SUPPORT_LOG_MESSAGE)
		ADD_DEFINITIONS(-DSUPPORT_LOG_MESSAGE)
	ENDIF(SUPPORT_LOG_MESSAGE)
ENDIF(DEFINED SUPPORT_LOG_MESSAGE)

IF(DEFINED SUPPORT_FILE_LOGGING)
	MESSAGE("SUPPORT_FILE_LOGGING: ${SUPPORT_FILE_LOGGING}")
	IF(SUPPORT_FILE_LOGGING)
		ADD_DEFINITIONS(-DSUPPORT_FILE_LOGGING)
	ENDIF(SUPPORT_FILE_LOGGING)
ENDIF(DEFINED SUPPORT_FILE_LOGGING)

IF(DEFINED IPC_SOCKET)
	ADD_DEFINITIONS(-DIPC_SOCKET=\"${IPC_SOCKET}\")
ENDIF(DEFINED IPC_SOCKET)

IF(DEFINED NOTIFY_DIR)
	ADD_DEFINITIONS(-DNOTIFY_DIR=\"${NOTIFY_DIR}\")
ENDIF(DEFINED NOTIFY_DIR)

ADD_SUBDIRECTORY(provider/)
ADD_SUBDIRECTORY(tab-adaptor/)
ADD_SUBDIRECTORY(bookmark-adaptor/)
ADD_SUBDIRECTORY(bookmark-csc-adaptor/)
ADD_SUBDIRECTORY(history-adaptor/)

PROJECT(${PKG_NAME} C)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/systemd/browser-provider.service DESTINATION lib/systemd/system)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/systemd/browser-provider.socket DESTINATION lib/systemd/system)

IF(DEFINED PKG_LICENSE_PATH)
	CONFIGURE_FILE(LICENSE.APLv2 share/license/${PROJECT_NAME})
	INSTALL(FILES share/license/${PROJECT_NAME} DESTINATION ${PKG_LICENSE_PATH})
ENDIF(DEFINED PKG_LICENSE_PATH)
