
## PROJECT NAME
PROJECT(capi-web-bookmark C)
SET(PACKAGE_DESCRIPTION "Internet Bookmark functions supported by browser-provider")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

SET(PC_REQUIRED "dlog libpng")

INCLUDE(FindPkgConfig)

pkg_check_modules(bookmark_adaptor_pkgs REQUIRED ${PC_REQUIRED})

FOREACH(flag ${bookmark_adaptor_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

## INCLUDES
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/common-adaptor/include
	${CMAKE_SOURCE_DIR}/provider/include)

SET(BOOKMARK_LINK_LIBRARIES ${GLIB-2_LIBRARIES}
		${GOBJECT-2_LIBRARIES}
		pthread
	)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall")

ADD_DEFINITIONS(-DBROWSER_PROVIDER_LOG_TAG=\"BOOKMARK_ADAPTOR\")

ADD_LIBRARY(${PROJECT_NAME} SHARED
	${CMAKE_SOURCE_DIR}/common-adaptor/common-adaptor.c
	${CMAKE_SOURCE_DIR}/common-adaptor/common-adaptor-png.c
	${CMAKE_SOURCE_DIR}/provider/browser-provider-socket.c
	${CMAKE_SOURCE_DIR}/provider/browser-provider-shm.c
	${CMAKE_CURRENT_SOURCE_DIR}/bookmark-adaptor-image.c
	${CMAKE_CURRENT_SOURCE_DIR}/bookmark-adaptor.c )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${bookmark_adaptor_pkgs_LDFLAGS} ${BOOKMARK_LINK_LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${PKG_VERSION})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/web_bookmark.h DESTINATION ${INCLUDE_INSTALL_DIR}/web)
CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/bookmark-adaptor.h DESTINATION ${INCLUDE_INSTALL_DIR}/web)
CONFIGURE_FILE(bookmark-adaptor.pc.in bookmark-adaptor.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/bookmark-adaptor.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
