
## PROJECT NAME
PROJECT(${PKG_NAME} C)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE(FindPkgConfig)

pkg_check_modules(browser_provider_pkgs REQUIRED
		sqlite3
		cynara-client
		cynara-creds-socket
		cynara-session
		openssl
		libsmack
		dlog
		libsystemd-daemon
		tapi)


IF(DEFINED SUPPORT_BOOTING_DONE)
	IF(SUPPORT_BOOTING_DONE)
		pkg_check_modules(browser_provider_booting_done_pkgs REQUIRED glib-2.0 gobject-2.0 ecore edbus)
	ENDIF(SUPPORT_BOOTING_DONE)
ENDIF(DEFINED SUPPORT_BOOTING_DONE)

FOREACH(flag ${browser_provider_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${browser_provider_booting_done_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)


## INCLUDES
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/history-adaptor/include
	${CMAKE_SOURCE_DIR}/tab-adaptor/include
	${CMAKE_SOURCE_DIR}/bookmark-adaptor/include)

set(BP_LINK_LIBRARIES ${GLIB-2_LIBRARIES}
		${GOBJECT-2_LIBRARIES}
		pthread
	)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIE")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall")
SET(browser_provider_pkgs_LDFLAGS "${browser_provider_pkgs_LDFLAGS} -pie")

IF(DEFINED PROVIDER_DIR)
	ADD_DEFINITIONS(-DPROVIDER_DIR=\"${PROVIDER_DIR}\")
ENDIF(DEFINED PROVIDER_DIR)
IF(DEFINED DATABASE_DIR)
	ADD_DEFINITIONS(-DDATABASE_DIR=\"${DATABASE_DIR}\")
ENDIF(DEFINED DATABASE_DIR)



IF(DEFINED SUPPORT_SERVER_PRIVILEGE)
	IF(SUPPORT_SERVER_PRIVILEGE)
		ADD_DEFINITIONS(-DSUPPORT_SERVER_PRIVILEGE)
	ENDIF(SUPPORT_SERVER_PRIVILEGE)
ENDIF(DEFINED SUPPORT_SERVER_PRIVILEGE)

ADD_DEFINITIONS(-DBROWSER_PROVIDER_LOG_TAG=\"BROWSER_PROVIDER\")

ADD_EXECUTABLE(${PROJECT_NAME}
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-db.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-socket.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-slots.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-notify.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-shm.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-requests.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-tabs.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-bookmarks.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-history.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-requests-manager.c
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-main.c )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${browser_provider_pkgs_LDFLAGS} ${browser_provider_booting_done_pkgs_LDFLAGS} ${BP_LINK_LIBRARIES})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BIN_INSTALL_DIR})

