
## PROJECT NAME
PROJECT(capi-web-tab C)
SET(PACKAGE_DESCRIPTION "Internet tab functions supported by browser-provider")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Debug")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

SET(PC_REQUIRED "dlog libpng")

IF(SUPPORT_CLOUD_SYNC)
	SET(PC_REQUIRED "dlog libpng iotcloud notification json-c glib-2.0")
ENDIF(SUPPORT_CLOUD_SYNC)

INCLUDE(FindPkgConfig)

pkg_check_modules(tab_adaptor_pkgs REQUIRED ${PC_REQUIRED})

FOREACH(flag ${tab_adaptor_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

## INCLUDES
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/common-adaptor/include
	${CMAKE_SOURCE_DIR}/provider/include)

SET(TAB_LINK_LIBRARIES ${GLIB-2_LIBRARIES}
		${GOBJECT-2_LIBRARIES}
		pthread
	)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -Wall")

ADD_DEFINITIONS(-DBROWSER_PROVIDER_LOG_TAG=\"TAB_ADAPTOR\")

SET(BP_TAB_ADAPTOR_SOURCES
	${CMAKE_SOURCE_DIR}/common-adaptor/common-adaptor.c
	${CMAKE_SOURCE_DIR}/common-adaptor/common-adaptor-png.c
	${CMAKE_SOURCE_DIR}/provider/browser-provider-socket.c
	${CMAKE_SOURCE_DIR}/provider/browser-provider-shm.c
	${CMAKE_CURRENT_SOURCE_DIR}/tab-adaptor.c )

IF(SUPPORT_CLOUD_SYNC)
	LIST(APPEND BP_TAB_ADAPTOR_SOURCES
	${CMAKE_SOURCE_DIR}/common-adaptor/sync-adaptor.c
	${CMAKE_SOURCE_DIR}/common-adaptor/sync-adaptor-tab.c
	${CMAKE_SOURCE_DIR}/common-adaptor/sync-adaptor-cloud-tab.c
	${CMAKE_SOURCE_DIR}/common-adaptor/sync-adaptor-cloud.c
	${CMAKE_SOURCE_DIR}/common-adaptor/sync-adaptor-cloud-json.c)
ENDIF(SUPPORT_CLOUD_SYNC)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${BP_TAB_ADAPTOR_SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${tab_adaptor_pkgs_LDFLAGS} ${TAB_LINK_LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${PKG_VERSION})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/web_tab.h DESTINATION ${INCLUDE_INSTALL_DIR}/web)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/web_tab_doc.h DESTINATION ${INCLUDE_INSTALL_DIR}/web)
CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/tab-adaptor.h DESTINATION ${INCLUDE_INSTALL_DIR}/web)
CONFIGURE_FILE(tab-adaptor.pc.in tab-adaptor.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/tab-adaptor.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
